--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=mysql
 spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.flyway.schemas=test
+spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
+spring.flyway.baselineVersion=0
+spring.flyway.locations=classpath:db/migration
